--- a/src/test/resources/application.yaml
+++ b/src/test/resources/application.yaml
@@ -1,13 +1,15 @@
 spring:
   jpa:
     database-platform: org.hibernate.dialect.H2Dialect
-    show-sql: true
-    generate-ddl: true
-    hibernate:
-      ddl-auto: create-drop
+    properties:
+      hibernate:
+        show_sql: true
+        format_sql: true
   datasource:
     url: jdbc:h2:mem:db;DB_CLOSE_DELAY=-1
     driver-class-name: org.h2.Driver
     username: sa
     password: 1qaz2wsx
+  flyway:
+    locations: classpath:/db/migration
 
